Agregando últimas imagenes y creando archivos html y sass

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Elisyum Restaurant</title>
 </head>
 <body>
-    
+    <header class="main-header">
+        <div class="l-container">
+            <img src="assets/img/logo.png">
+        </div>
+    </header>
 </body>
 </html>
