--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 <body>
     <header class="main-header">
         <div class="l-container">
-            <img src="assets/img/logo.png">
+            <img class="main-logo" src="assets/img/logo.png">
+            <nav>
+                <ul class="main-menu">
+                    <li class="main-menu__item"><a class="main-menu__link">Inicio</a></li>
+                    <li class="main-menu__item"><a class="main-menu__link">Menu</a></li>
+                    <li class="main-menu__item"><a class="main-menu__link">Reservación</a></li>
+                    <li class="main-menu__item"><a class="main-menu__link">Chefs</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 </body>
