Añadiendo navBar del header , titulo y descripción

--- a/index.html
+++ b/index.html
@@ -4,19 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elisyum Restaurant</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <header class="main-header">
-        <div class="l-container">
-            <img class="main-logo" src="assets/img/logo.png">
-            <nav>
-                <ul class="main-menu">
-                    <li class="main-menu__item"><a class="main-menu__link">Inicio</a></li>
-                    <li class="main-menu__item"><a class="main-menu__link">Menu</a></li>
-                    <li class="main-menu__item"><a class="main-menu__link">Reservación</a></li>
-                    <li class="main-menu__item"><a class="main-menu__link">Chefs</a></li>
-                </ul>
-            </nav>
+        <img class="main-header__imagen" src="assets/img/pexels-pixabay-260922 3.png">
+        <div class="l-container main-header__block">
+            <div class="navbar">
+                <img class="main-logo" src="assets/img/logo.png">
+                <nav>
+                    <ul class="main-menu">
+                        <li class="main-menu__item"><a class="main-menu__link">Inicio</a></li>
+                        <li class="main-menu__item"><a class="main-menu__link">Menu</a></li>
+                        <li class="main-menu__item"><a class="main-menu__link">Reservación</a></li>
+                        <li class="main-menu__item"><a class="main-menu__link">Chefs</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <img class="main-header__imagen" src="assets/img/pexels-pixabay-260922 3.png">
+        <div class="header-content center__content center__item">
+            <div>
+                <h1 class="header-content__title">Elisyum Gourmet</h1>
+                <p class="header-content__description">Descubre una experiencia culinaria exquisita donde sabores dorados se encuentran con la elegancia de la noche</p>
+            </div>
         </div>
     </header>
 </body>
