Subiendo algunas imagenes extra y terminando la vista del header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header class="main-header">
         <img class="main-header__imagen" src="assets/img/pexels-pixabay-260922 3.png">
+        <div class="main-menu__toggle" id="main-menu_toggle"></div>
         <div class="l-container main-header__block">
             <div class="navbar">
                 <img class="main-logo" src="assets/img/logo.png">
@@ -26,9 +27,14 @@
         <div class="header-content center__content center__item">
             <div>
                 <h1 class="header-content__title">Elisyum Gourmet</h1>
-                <p class="header-content__description">Descubre una experiencia culinaria exquisita donde sabores dorados se encuentran con la elegancia de la noche</p>
+                <p class="header-content__description">Experimenta una exquisita cena donde los sabores dorados se fusionan con la elegancia de la noche.                </p>
+                <div class="header-content__buttons">
+                    <div class="button button__ghost_icon"> <span><img class="icon icon__ghost" src="assets/img/Ver_menu.png"></span> Vea el Menu</div>
+                    <div class="button button__default_icon"> <span><img class="icon icon__default" src="assets/img/Reservar.png"></span>Reserve una mesa</div>
+                </div>
             </div>
         </div>
     </header>
+    <script src="assets/js/scripts.js"></script>
 </body>
 </html>
