Subiendo la sección de Postres

--- a/index.html
+++ b/index.html
@@ -8,19 +8,17 @@
 </head>
 <body>
     <header class="main-header">
-        <div class="main-header__cover-container">
             <img class="main-header__imagen" src="assets/img/pexels-pixabay-260922 3.png">
-        </div>
             <div class="l-container main-header__block">
             <div class="main-menu__toggle" id="main-menu__toggle">.</div>
             <div class="navbar">
                 <img class="main-logo" src="assets/img/logo.png">
                 <nav>
                     <ul class="main-menu" id="main-menu">
-                        <li class="main-menu__item"><a class="main-menu__link">Inicio</a></li>
-                        <li class="main-menu__item"><a class="main-menu__link">Menu</a></li>
-                        <li class="main-menu__item"><a class="main-menu__link">Reservación</a></li>
-                        <li class="main-menu__item"><a class="main-menu__link">Chefs</a></li>
+                        <li class="main-menu__item"><a class="link">Inicio</a></li>
+                        <li class="main-menu__item"><a class="link">Menu</a></li>
+                        <li class="main-menu__item"><a class="link">Reservación</a></li>
+                        <li class="main-menu__item"><a class="link">Chefs</a></li>
                     </ul>
                 </nav>
             </div>
@@ -54,6 +52,48 @@
                 <div class="button button__ghost_icon"> <span><img class="icon icon__ghost" src="assets/img/Ver_menu.png"></span> Conoce a Nuestros Chefs</div>
             </div>
         </section>
+        <section class="main-postres l-container">
+            <h2 class="main-postres__titulo">Postres Condecorados</h2>
+            <p class="main-postres__description">Postres con premios Ganados en el Concurso XIX</p>
+            <div class="main-postres__cards">
+                <div class="card-postre">
+                    <img class="card-postre__foto" src="assets/img/Dualidad de Sabores.jpg">
+                    <div class="card-postre__content">
+                        <div class="card-postre__nombre">Dualidad de Sabores</div>
+                        <p class="card-postre__minutos1">10 minutos</p>
+                        <div class="card-postre__footer">
+                            <img class="card-postre__puntuación" src="assets/img/Puntaje.png">
+                            <div class="card-postre__ordenar link">Ordena Aquí</div>
+                        </div>
+                    </div>  
+                </div>
+                <div class="card-postre">
+                    <img class="card-postre__foto" src="assets/img/Dualidad de Sabores.jpg">
+                    <div class="card-postre__content">
+                        <div class="card-postre__nombre">Dualidad de Sabores</div>
+                        <p class="card-postre__minutos1">10 minutos</p>
+                        <div class="card-postre__footer">
+                            <img class="card-postre__puntuación" src="assets/img/Puntaje.png">
+                            <div class="card-postre__ordenar link">Ordena Aquí</div>
+                        </div>
+                    </div>  
+                </div>
+                <div class="card-postre">
+                    <img class="card-postre__foto" src="assets/img/Dualidad de Sabores.jpg">
+                    <div class="card-postre__content">
+                        <div class="card-postre__nombre">Dualidad de Sabores</div>
+                        <p class="card-postre__minutos1">10 minutos</p>
+                        <div class="card-postre__footer">
+                            <img class="card-postre__puntuación" src="assets/img/Puntaje.png">
+                            <div class="card-postre__ordenar link">Ordena Aquí</div>
+                        </div>
+                    </div>  
+                </div>
+            </div>
+
+        </section>
+
+        <br><br><br>
     </main>
     <footer>
     </footer>
