Subiendo la sección de Lugar

--- a/index.html
+++ b/index.html
@@ -56,33 +56,43 @@
             <h2 class="main-postres__titulo">Postres Condecorados</h2>
             <p class="main-postres__description">Postres con premios Ganados en el Concurso XIX</p>
             <div class="main-postres__cards">
+
                 <div class="card-postre">
-                    <img class="card-postre__foto" src="assets/img/Dualidad de Sabores.jpg">
+                    <div class="card-postre__foto" >
+                        <img class="postre" src="assets/img/Dualidad de Sabores.jpg">
+                    </div>
                     <div class="card-postre__content">
-                        <div class="card-postre__nombre">Dualidad de Sabores</div>
-                        <p class="card-postre__minutos1">10 minutos</p>
+                        <div class="card-postre__nombre">Dualidad de Sabores Verano</div>
+                        <p class="card-postre__tiempo"><span><img  class="clock" src="assets/img/clock.png"></span>10 minutos</p>    
                         <div class="card-postre__footer">
                             <img class="card-postre__puntuación" src="assets/img/Puntaje.png">
                             <div class="card-postre__ordenar link">Ordena Aquí</div>
                         </div>
                     </div>  
                 </div>
+
                 <div class="card-postre">
-                    <img class="card-postre__foto" src="assets/img/Dualidad de Sabores.jpg">
+                    <div class="card-postre__foto">
+                        <img class="postre" src="assets/img/Torta de Chocolate.jpg">
+                    </div>
                     <div class="card-postre__content">
-                        <div class="card-postre__nombre">Dualidad de Sabores</div>
-                        <p class="card-postre__minutos1">10 minutos</p>
+                        <div class="card-postre__nombre">Torta de Chocolate Arabe</div>
+                        <p class="card-postre__tiempo"><span><img  class="clock" src="assets/img/clock.png"></span>15 minutos</p>    
                         <div class="card-postre__footer">
                             <img class="card-postre__puntuación" src="assets/img/Puntaje.png">
                             <div class="card-postre__ordenar link">Ordena Aquí</div>
                         </div>
                     </div>  
                 </div>
+
+
                 <div class="card-postre">
-                    <img class="card-postre__foto" src="assets/img/Dualidad de Sabores.jpg">
+                    <div class="card-postre__foto">
+                        <img class="postre" src="assets/img/Trex experiencias Dulces.jpg">
+                    </div>
                     <div class="card-postre__content">
-                        <div class="card-postre__nombre">Dualidad de Sabores</div>
-                        <p class="card-postre__minutos1">10 minutos</p>
+                        <div class="card-postre__nombre">Trex experiencias Dulces</div>
+                        <p class="card-postre__tiempo"><span><img  class="clock" src="assets/img/clock.png"></span>20 minutos</p>    
                         <div class="card-postre__footer">
                             <img class="card-postre__puntuación" src="assets/img/Puntaje.png">
                             <div class="card-postre__ordenar link">Ordena Aquí</div>
@@ -92,8 +102,36 @@
             </div>
 
         </section>
+        <section class="main-local l-container">
+            <div class="main-local__content">
+                <div class="comida">
+                    <h2 class="main-local__title">Nuestro refugio nocturno</h2>
+                    <p  class="main-local__description">Descubre el encanto de nuestro restaurante cuando
+                        cae la noche. Nuestro espacio se transforma con luces cálidas y una atmósfera 
+                        acogedora que te invita a relajarte y disfrutar de una velada inolvidable.
+                        Ya sea en nuestro elegante salón interior o en la terraza bajo las estrellas, 
+                        cada rincón está diseñado para ofrecerte una experiencia única y mágica.</p>
+                </div>
+                <div class="button button__default_icon"> <span><img class="icon icon__default" src="assets/img/Reservar.png"></span>Reserve una mesa</div>
+            </div>
+            <div class="main-local__foto-container">
+                <img class="main-local__foto"src="assets/img/Imagen de Restaurante.jpg" alt="Imagen del Lugar">
+            </div>
+        </section>
+        <section class="main-comentarios">
+            <div class="main-comentarios__contenido l-container">
+                <div class="main-comentario">
+                    <img class="main-comentario__imagen" src="assets/img/Usuario_Comentario_1.png" >
+                    <div class="main-comentario__contenido">
+                        <h3 class="main-comentario__titulo">Sara Jay Velasquez</h3>
+                        <p class="main-comentario__texto">Fue una de las mejores Experiencias que he
+                            vivido hasta ahora todos los platillos fueron extremadanmente bueno y deliciosos</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <br><br><br>
+        <br><br><br><br>
     </main>
     <footer>
     </footer>
