Subiendo nuevo componente de Comentarios

--- a/index.html
+++ b/index.html
@@ -118,18 +118,43 @@
                 <img class="main-local__foto"src="assets/img/Imagen de Restaurante.jpg" alt="Imagen del Lugar">
             </div>
         </section>
-        <section class="main-comentarios">
-            <div class="main-comentarios__contenido l-container">
-                <div class="main-comentario">
-                    <img class="main-comentario__imagen" src="assets/img/Usuario_Comentario_1.png" >
-                    <div class="main-comentario__contenido">
-                        <h3 class="main-comentario__titulo">Sara Jay Velasquez</h3>
-                        <p class="main-comentario__texto">Fue una de las mejores Experiencias que he
-                            vivido hasta ahora todos los platillos fueron extremadanmente bueno y deliciosos</p>
+        <div class="main-section-comments">
+            <img class="main-section-comments__image" src="assets/img/Imagen_Fondo_Comentarios.jpg">
+            <div class="main-section-comments__content l-container">
+                <div class="main-comment">
+                    <img class="main-comment__image" src="assets/img/Usuario_Comentario_1.png" >
+                    <div class="main-comment__content">
+                        <div class="main-comment__title">Sara Jay Velasquez</div>
+                        <p class="main-comment__text">Fue una de las mejores experiencias que he
+                            vivido hasta ahora. Todos los platillos fueron extremadamente buenos y deliciosos.</p>
+                    </div>
+                </div>
+                <div class="main-comment">
+                    <img class="main-comment__image" src="assets/img/Usuario_Comentario_1.png" >
+                    <div class="main-comment__content">
+                        <div class="main-comment__title">Sara Jay Velasquez</div>
+                        <p class="main-comment__text">Fue una de las mejores experiencias que he
+                            vivido hasta ahora. Todos los platillos fueron extremadamente buenos y deliciosos.</p>
+                    </div>
+                </div>
+                <div class="main-comment">
+                    <img class="main-comment__image" src="assets/img/Usuario_Comentario_1.png" >
+                    <div class="main-comment__content">
+                        <div class="main-comment__title">Sara Jay Velasquez</div>
+                        <p class="main-comment__text">Fue una de las mejores experiencias que he
+                            vivido hasta ahora. Todos los platillos fueron extremadamente buenos y deliciosos.</p>
+                    </div>
+                </div>
+                <div class="main-comment">
+                    <img class="main-comment__image" src="assets/img/Usuario_Comentario_1.png" >
+                    <div class="main-comment__content">
+                        <div class="main-comment__title">Sara Jay Velasquez</div>
+                        <p class="main-comment__text">Fue una de las mejores experiencias que he
+                            vivido hasta ahora. Todos los platillos fueron extremadamente buenos y deliciosos.</p>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
 
         <br><br><br><br>
     </main>
