--- a/index.html
+++ b/index.html
@@ -155,7 +155,58 @@
                 </div>
             </div>
         </div>
+        <section class="main-chef l-container">
+            <div class="chef1 main-chef__container">
+                <div class="main-chef__content">
+                    <div>
+                        <div class="main-chef__title">
+                            Gaston Fernandez Bernoulli
+                        </div>
+                        <div class="main-reward">
+                            <img class="main-reward__img"src="assets/img/Estrella.png">
+                            <p class="main-reward__description"> Ganador del XVI concurso</p>
+                        </div>
+                    </div>
+                    <div class="button button__ghost_icon  main-chef__button">
+                        ver más
+                    </div>
+                </div>
+            </div>
 
+            <div class="main-chef__container chef2">
+                <div class="main-chef__content">
+                    <div>
+                        <div class="main-chef__title">
+                            Gaston Fernandez Bernoulli
+                        </div>
+                        <div class="main-reward">
+                            <img class="main-reward__img"src="assets/img/Estrella.png">
+                            <p class="main-reward__description"> Ganador del XVI concurso</p>
+                        </div>
+                    </div>
+                    <div class="button button__ghost_icon  main-chef__button">
+                        ver más
+                    </div>
+                </div>
+            </div>
+            <div class="main-chef__container chef3">
+                <div class="main-chef__content">
+                    <div>
+                        <div class="main-chef__title">
+                            Gaston Fernandez Bernoulli
+                        </div>
+                        <div class="main-reward">
+                            <img class="main-reward__img"src="assets/img/Estrella.png">
+                            <p class="main-reward__description"> Ganador del XVI concurso</p>
+                        </div>
+                    </div>
+                    <div class="button button__ghost_icon  main-chef__button">
+                        ver más
+                    </div>
+                </div>
+            </div>
+
+        </section>
         <br><br><br><br>
     </main>
     <footer>
