Subiendo el footer

--- a/index.html
+++ b/index.html
@@ -126,31 +126,35 @@
                     <div class="main-comment__content">
                         <div class="main-comment__title">Sara Jay Velasquez</div>
                         <p class="main-comment__text">Fue una de las mejores experiencias que he
-                            vivido hasta ahora. Todos los platillos fueron extremadamente buenos y deliciosos.</p>
+                            vivido hasta ahora. Todos los platillos fueron extremadamente buenos y deliciosos.
+                        </p>
                     </div>
                 </div>
                 <div class="main-comment">
-                    <img class="main-comment__image" src="assets/img/Usuario_Comentario_1.png" >
+                    <img class="main-comment__image" src="assets/img/Usuario_Comentario_2.png" >
                     <div class="main-comment__content">
-                        <div class="main-comment__title">Sara Jay Velasquez</div>
-                        <p class="main-comment__text">Fue una de las mejores experiencias que he
-                            vivido hasta ahora. Todos los platillos fueron extremadamente buenos y deliciosos.</p>
+                        <div class="main-comment__title">Martin Alvarado Garriz</div>
+                        <p class="main-comment__text"> La atención hacia mi persona es lo que más destaco de este Lugar
+                            cada uno de los trabajadores esta altamente capacitado para brindarnos una experiencia completa
+                        </p>
                     </div>
                 </div>
                 <div class="main-comment">
-                    <img class="main-comment__image" src="assets/img/Usuario_Comentario_1.png" >
+                    <img class="main-comment__image" src="assets/img/Usuario_Comentario_3.png" >
                     <div class="main-comment__content">
-                        <div class="main-comment__title">Sara Jay Velasquez</div>
-                        <p class="main-comment__text">Fue una de las mejores experiencias que he
-                            vivido hasta ahora. Todos los platillos fueron extremadamente buenos y deliciosos.</p>
+                        <div class="main-comment__title">Maria Quispe Gamarra</div>
+                        <p class="main-comment__text">Desde el aperitivo hasta el postre, cada uno de los platos servidos
+                            sin duda alguna es de primera, pronto volvere hambrienta.
+                        </p>
                     </div>
                 </div>
                 <div class="main-comment">
-                    <img class="main-comment__image" src="assets/img/Usuario_Comentario_1.png" >
+                    <img class="main-comment__image" src="assets/img/Usuario_Comentario_4.png" >
                     <div class="main-comment__content">
-                        <div class="main-comment__title">Sara Jay Velasquez</div>
-                        <p class="main-comment__text">Fue una de las mejores experiencias que he
-                            vivido hasta ahora. Todos los platillos fueron extremadamente buenos y deliciosos.</p>
+                        <div class="main-comment__title">Mateo Marquez Leopoldo</div>
+                        <p class="main-comment__text"> La alta cocina de este restaurante me demostro que no solo 
+                            es el sabor del platillo , sino tambien la experiencia que me brindan
+                        </p>
                     </div>
                 </div>
             </div>
@@ -207,9 +211,26 @@
             </div>
 
         </section>
-        <br><br><br><br>
     </main>
-    <footer>
+    <footer class="main-footer">
+        <div>
+            <ul class="main-footer__elements">
+                <li><img class="main-footer__icon" src="assets/img/icono_Facebook.png"></li>
+                <li><img class="main-footer__icon" src="assets/img/icono_Google.png"></li>
+                <li><img class="main-footer__icon" src="assets/img/icono_Instagram.png"></li>
+                <li><img class="main-footer__icon" src="assets/img/icono_Twiter.png"></li>
+                <li><img class="main-footer__icon" src="assets/img/icono_Youtube.png"></li>
+            </ul>   
+        </div>
+        <div >
+            <ul class="main-footer__links">
+                <li><a class="link main-footer__link" href="https://www.facebook.com" target="_blank">Facebook</a></li>
+                <li><a class="link main-footer__link" href="https://www.google.com.pe" target="_blank">Google</a></li>
+                <li><a class="link main-footer__link" href="https://www.instagram.com" target="_blank">Instagram</a></li>
+                <li><a class="link main-footer__link" href="https://twitter.com" target="_blank">Twitter</a></li>
+                <li><a class="link main-footer__link" href="https://www.youtube.com" target="_blank">Youtube</a></li>
+            </ul>
+        </div>
     </footer>
     <script src="assets/js/scripts.js"></script>
 </body>
