Subiendo algunos cambios

--- a/index.html
+++ b/index.html
@@ -159,57 +159,61 @@
                 </div>
             </div>
         </div>
-        <section class="main-chef l-container">
-            <div class="chef1 main-chef__container">
-                <div class="main-chef__content">
-                    <div>
-                        <div class="main-chef__title">
-                            Gaston Fernandez Bernoulli
+        <section class="main-chefs-reward">
+            <h2 class="main-chefs-reward__title">Los mejores Chefs</h2>
+            <p class="main-chefs-reward__description">Tenemos a los mejores chefs Condecorados</p>
+            <div class="main-chef l-container">
+                <div class="chef1 main-chef__container">
+                    <div class="main-chef__content">
+                        <div>
+                            <div class="main-chef__title">
+                                Gaston Fernandez Bernoulli
+                            </div>
+                            <div class="main-reward">
+                                <img class="main-reward__img"src="assets/img/Estrella.png">
+                                <p class="main-reward__description"> Ganador del XVI concurso</p>
+                            </div>
                         </div>
-                        <div class="main-reward">
-                            <img class="main-reward__img"src="assets/img/Estrella.png">
-                            <p class="main-reward__description"> Ganador del XVI concurso</p>
+                        <div class="button button__ghost_icon  main-chef__button">
+                            ver más
                         </div>
-                    </div>
-                    <div class="button button__ghost_icon  main-chef__button">
-                        ver más
                     </div>
                 </div>
-            </div>
 
-            <div class="main-chef__container chef2">
-                <div class="main-chef__content">
-                    <div>
-                        <div class="main-chef__title">
-                            Gaston Fernandez Bernoulli
+                <div class="main-chef__container chef2">
+                    <div class="main-chef__content">
+                        <div>
+                            <div class="main-chef__title">
+                                Gaston Fernandez Bernoulli
+                            </div>
+                            <div class="main-reward">
+                                <img class="main-reward__img"src="assets/img/Estrella.png">
+                                <p class="main-reward__description"> Ganador del XVI concurso</p>
+                            </div>
                         </div>
-                        <div class="main-reward">
-                            <img class="main-reward__img"src="assets/img/Estrella.png">
-                            <p class="main-reward__description"> Ganador del XVI concurso</p>
+                        <div class="button button__ghost_icon  main-chef__button">
+                            ver más
                         </div>
-                    </div>
-                    <div class="button button__ghost_icon  main-chef__button">
-                        ver más
                     </div>
                 </div>
-            </div>
-            <div class="main-chef__container chef3">
-                <div class="main-chef__content">
-                    <div>
-                        <div class="main-chef__title">
-                            Gaston Fernandez Bernoulli
+                <div class="main-chef__container chef3">
+                    <div class="main-chef__content">
+                        <div>
+                            <div class="main-chef__title">
+                                Gaston Fernandez Bernoulli
+                            </div>
+                            <div class="main-reward">
+                                <img class="main-reward__img"src="assets/img/Estrella.png">
+                                <p class="main-reward__description"> Ganador del XVI concurso</p>
+                            </div>
                         </div>
-                        <div class="main-reward">
-                            <img class="main-reward__img"src="assets/img/Estrella.png">
-                            <p class="main-reward__description"> Ganador del XVI concurso</p>
+                        <div class="button button__ghost_icon  main-chef__button">
+                            ver más
                         </div>
-                    </div>
-                    <div class="button button__ghost_icon  main-chef__button">
-                        ver más
                     </div>
                 </div>
-            </div>
 
+            </div>
         </section>
     </main>
     <footer class="main-footer">
